samples/_failures_safe/1761077855_981a19_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_69ff83ba.c: In function ‘main’:
./samples/SAFE/__tmp_69ff83ba.c:154:9: error: expected declaration or statement at end of input
  154 |         if (input_len + len >= MAX_INPUT_LEN * 10 - 1) {
      |         ^~
./samples/SAFE/__tmp_69ff83ba.c:154:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_69ff83ba.c:154:9: error: expected declaration or statement at end of input
